# kannel-opensmppbox

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  UPGRADE  acinclude.m4  configure  configure.in  sb-config.h.in  smppbox.patch
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: userguide.xml
example/: opensmppbox.conf.example  smppbox.conf.example  smpplogins.txt.example
gw/: Makefile.am  Makefile.in  box-dlr.c  box-dlr.h  opensmppbox-cfg.def  opensmppbox.c  smppbox-cfg.def  smppbox.c
rpm/: smppbox.spec.in
